// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`Header - Snapshots > matches snapshot for Header with onboarding path 1`] = `
<div
  data-testid="header-container"
>
  <div
    data-testid="logo"
  >
    Logo
  </div>
  <div
    data-testid="header-title"
  >
    Identity keys
  </div>
  <div
    data-step="1"
    data-testid="onboarding-header"
  >
    Onboarding Step 
    1
  </div>
</div>
`;

exports[`Header - Snapshots > matches snapshot for default Header 1`] = `
<div
  data-testid="header-container"
>
  <div
    data-testid="logo"
  >
    Logo
  </div>
  <div
    data-testid="header-title"
  >
    Sign in
  </div>
  <div
    data-testid="home-header"
  >
    Home Header
  </div>
</div>
`;
